style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-family: Arial, sans-serif;
	font-size: 18px;
	line-height: 150%;
}

.container {
	width: 80%;
	max-width: 800px;
	margin: 0 auto;
	padding: 0 20px 20px;
	overflow: hidden;
	border: 10px solid #09859d;
	border-top-width: 30px;
	border-bottom-width: 30px;
}

.main_content {
	padding: 0 50px;
}

img {
	width: 100%;
}

p:first-child {
	padding: 0;
	text-align: center;
}

p {
	margin: 20px 0;
}

ul {
	padding: 0 50px;
}

.btn {
	display: block;
	width: 100%;
	height: 45px;
	background: #f04736;
	border-radius: 5px;
	text-align: center;
	margin-top: 30px;
	text-decoration: none;
	color: #fff;
	font-weight: bold;
	line-height: 45px;

}

.btn a {
	text-decoration: none;
	color: #fff;
	font-weight: bold;
	line-height: 40px;
}

.card {
	width: 48%;
	margin: 1%;
	float: left;
	font-weight: bold;
}

.two_cards {
	margin: 5% -1%;
}

.two_cards:after, .test:after {
	content: "";
	display: block;
	clear: both;
}

.tel {
	text-decoration: none;
	color: #000;
}

footer {
	background: #09859d;
	margin: 20px 0;
	padding: 30px 0;
	text-align: center;
}

.test {
	margin: 0 auto;
	width: 12%;
}

.test img {
	display: inline-block;
	width: 42%;
	margin: 4%;
	float:left;
}

footer p {
	color: #fff;
}

.sign_out {
	color: #fff;
	font-weight: bold;
	font-size: 14px;
}

@media screen and (max-width: 800px) {
	.card {
		width: 98%;
		margin: 1%;
	}
}

